--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/GermanT00/Indecisa-IndumentariaFemenina/issues"
   },
-  "homepage": "https://github.com/GermanT00/Indecisa-IndumentariaFemenina#readme"
+  "homepage": "https://github.com/GermanT00/Indecisa-IndumentariaFemenina#readme",
+  "dependencies": {
+    "aos": "^2.3.4",
+    "node-sass": "^8.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
